--- a/src/Pages/Auth/Auth.scss
+++ b/src/Pages/Auth/Auth.scss
@@ -7,11 +7,24 @@
   align-items: stretch;
 
   .login-form-container {
-    width: 50%;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .login-inner-container{
+      // background-color: red;
+      width: 80%;
+      // height: 500px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   .carousel-container {
-    width: 50%;
+    width: 40%;
     background-color: var(--primary-dark-2);
     border-start-start-radius: 16px;
     border-end-start-radius: 16px;
@@ -21,18 +34,25 @@
       width: 100%;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
       height: 100vh;
 
       .carousel-title {
         font-size: 24px;
         font-weight: 700;
+        padding: 16px 0 ;
       }
 
       .carousel-description {
         font-size: 16px;
         font-weight: 500;
+        padding: 16px 0 ;
       }
     }
+  }
+
+  .welcome-message{
+    color: var(--primary-color) !important;
+    font-size: 20px;
+    font-weight: 700;
   }
 }
